feat(core): migrate to deterministic lanes